--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
+		<meta property="og:title" content="Videosort">
+  		<meta property="og:description" content="Automatic Footage Labelling for Filmmakers and Content Creators">
+  		<meta property="og:image" content="/th.png">
+  		<meta property="og:url" content="https://videosort.co">
+  		<meta property="og:type" content="website">
+
+  		<title>Videosort</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
