--- a/src/app.html
+++ b/src/app.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
-		<meta property="og:title" content="Videosort">
-  		<meta property="og:description" content="Automatic Footage Labelling for Filmmakers and Content Creators">
-  		<meta property="og:image" content="/th.png">
-  		<meta property="og:url" content="https://videosort.co">
+		<meta property="og:title" content="Avlana">
+  		<meta property="og:description" content="Local video tagging and management">
+  		<meta property="og:image" content="/AV_logo.png">
+  		<meta property="og:url" content="https://avlana.co">
   		<meta property="og:type" content="website">
 
-  		<title>Videosort</title>
+  		<title>Avlana</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
